# drawio_translation2

./: .gitignore  README.md  configuration.py  publiccode.yml  pyproject.toml  server.py  translate_drawio.py
test_files/: Em002-2_Abb_0.drawio  Em002-2_Abb_1.drawio  Em002-2_Abb_2.drawio  Em002-2_Abb_3.drawio  Em002-3_Abb_1.drawio  Em002-3_Abb_2.drawio  Em002-3_Abb_3.drawio  Em002-3_Abb_4.drawio  test.drawio  test2.drawio
