[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "drawio-label-translator"
version = "0.2.0"
description = "Translate labels in draw.io files; add UserObject data for label_xx/label-xx; includes a small Flask server."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Matthias Günter" }]
dependencies = [
  "requests>=2.31",
  "Flask>=3.0",
  "translators>=5.9.0",
  "langdetect>=1.0.9",

]

[project.scripts]
translate-drawio = "translate_drawio:main"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
strict_equality = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_subclassing_any = false
disallow_any_generics = false
ignore_missing_imports = true
files = ["translate_drawio.py", "server.py", "configuration.py"]
exclude = "(^\\.|^venv$|^\\.venv$|^build$|^dist$|^__pycache__$)"
